--- a/WSolver/WSolver.csproj
+++ b/WSolver/WSolver.csproj
@@ -75,6 +75,12 @@
     <Compile Include="RootsOutput.Designer.cs">
       <DependentUpon>RootsOutput.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SmallSegments.cs" />
     <Compile Include="Solver.cs" />
     <EmbeddedResource Include="InputForm.resx">
@@ -91,6 +97,9 @@
     </Compile>
     <EmbeddedResource Include="RootsOutput.resx">
       <DependentUpon>RootsOutput.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
